objects/MY_Partner__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>adresstest</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>autoid__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>autoid</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone</label>
        <type>Phone</type>
    </fields>
</CustomObject>